--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/404.html" />
+<meta property="og:url" content="https://superlifebuoy.github.io/404.html" />
 
 <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="">
@@ -96,7 +96,7 @@
     </main>
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://example.org/" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://superlifebuoy.github.io/" >
     &copy;  My New Hugo Site 2021 
   </a>
     <div>
